support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_private_inherit.i
%module xxx

class Foo {
};

class Bar : private Foo {
};

class Spam : protected Foo {
};

